--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -12354,6 +12354,17 @@
   url       = {http://www.aclweb.org/anthology/P13-1129},
 }
 
+@InProceedings{He2015,
+  author    = {He, X. and Chen, T. and Kan, M.-Y. and Chen, X.},
+  title     = {TriRank: Review-aware Explainable Recommendation by Modeling Aspects},
+  booktitle = {24th ACM International on Conference on Information and Knowledge Management},
+  year      = {2015},
+  pages     = {1661-1670},
+  doi       = {10.1145/2806416.2806504},
+  owner     = {Vincent},
+  timestamp = {2020.07.26},
+}
+
 @Article{He2016,
   author    = {He, X. and Chen, Y. and Li, D. and Hao, Y.},
   title     = {A Construction for Social Network on the Basis of Project Cooperation},
@@ -16616,6 +16627,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.02},
 }
 
+@InProceedings{Lee2018f,
+  author    = {Lee, O-J. and Jung, J. J.},
+  title     = {Explainable Movie Recommendation Systems by using Story-based Similarity},
+  booktitle = {ACM IUI Workshop on Explainable Smart Systems},
+  year      = {2018},
+  series    = {CEUR Workshop Proceedings},
+  owner     = {Vincent},
+  timestamp = {2020.07.26},
+  url       = {http://ceur-ws.org/Vol-2068/exss5.pdf},
+}
+
 @InProceedings{Lee2019b,
   author    = {Lee, O-J. and Jung, J. J.},
   title     = {Character Network Embedding-based Plot Structure Discovery in Narrative Multimedia},
@@ -16688,6 +16710,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.04.17},
   url       = {http://ceur-ws.org/Vol-2593/paper2.pdf},
+}
+
+@InProceedings{Lee2020c,
+  author    = {Lee, O-J. and Jung, J. J.},
+  title     = {Story Embedding: Learning Distributed Representations of Stories based on Character Networks},
+  booktitle = {29th International Joint Conference on Artificial Intelligence / 17th Pacific Rim International Conference on Artificial Intelligence},
+  year      = {2020},
+  pages     = {5070-5074},
+  doi       = {10.24963/ijcai.2020/709},
+  owner     = {Vincent},
+  timestamp = {2020.07.10},
 }
 
 @InCollection{Leerssen2019,
@@ -31654,6 +31687,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.10},
   url       = {https://digital.lib.washington.edu/researchworks/handle/1773/23330},
+}
+
+@InProceedings{Zhang2014,
+  author    = {Zhang, Y. and Lai, G. and Zhang, M. and Zhang, Y. and Liu, Y. and Ma, S.},
+  title     = {Explicit factor models for explainable recommendation based on phrase-level sentiment analysis},
+  booktitle = {37th International ACM SIGIR Conference on Research \& Development in Information Retrieval},
+  year      = {2014},
+  pages     = {83-92},
+  doi       = {10.1145/2600428.2609579},
+  owner     = {Vincent},
+  timestamp = {2020.07.26},
 }
 
 @InProceedings{Zhang2015,
