--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -12907,13 +12907,14 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 @Article{Holanda2017,
   author    = {Holanda, A. J. and Matias, M. and Ferreira, S. M. S. P. and Benevides, G. M. L. and Kinouchi, O.},
   title     = {Character Networks and Book Genre Classification},
-  journal   = {arXiv},
-  year      = {2017},
-  volume    = {cs.SI},
-  pages     = {1704.08197},
+  journal   = {International Journal of Modern Physics C},
+  year      = {2019},
+  volume    = {30},
+  number    = {08},
+  pages     = {1950058},
+  doi       = {10.1142/S012918311950058X},
   owner     = {Vincent},
   timestamp = {2017.04.27},
-  url       = {https://arxiv.org/abs/1704.08197},
 }
 
 @InCollection{Holland2001,
@@ -13995,6 +13996,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1002/9781118680605.ch20},
   owner     = {Vincent},
   timestamp = {2020.07.23},
+}
+
+@InProceedings{John2019,
+  author    = {John, M. and Baumann, M. and Schuetz, D. and Koch, S. and Ertl, T.},
+  title     = {A Visual Approach for the Comparative Analysis of Character Networks in Narrative Texts},
+  booktitle = {IEEE Pacific Visualization Symposium},
+  year      = {2019},
+  pages     = {247-256},
+  doi       = {10.1109/pacificvis.2019.00037},
+  owner     = {Vincent},
+  timestamp = {2020.08.04},
 }
 
 @InCollection{Johnson1994,
@@ -15587,6 +15599,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://dh2017.adho.org/abstracts/340/340.pdf},
 }
 
+@PhdThesis{Krug2020,
+  author      = {Krug, M.},
+  title       = {Techniques for the Automatic Extraction of Character Networks in German Historic Novels},
+  year        = {2020},
+  type        = {PhD Thesis},
+  institution = {Universität Würzburg, Fakultät für Mathematik und Informatik, Institut für Informatik},
+  owner       = {Vincent},
+  timestamp   = {2020.08.04},
+  url         = {https://opus.bibliothek.uni-wuerzburg.de/frontdoor/index/index/docId/20918},
+}
+
 @Article{Kruger2003,
   author    = {Kruger, D. and Fisher, M. and Jobling, I.},
   title     = {Proper and dark heroes as {DADS} and {CADS}},
@@ -15685,6 +15708,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/2736277.2741627},
   owner     = {Vincent},
   timestamp = {2020.03.24},
+}
+
+@Article{Kulshreshtha2020,
+  author    = {Kulshreshtha, P. and Guha, T.},
+  title     = {Dynamic Character Graph via Online Face Clustering for Movie Analysis},
+  journal   = {Multimedia Tools and Applications},
+  year      = {2020},
+  volume    = {in press},
+  owner     = {Vincent},
+  timestamp = {2020.08.04},
+  url       = {https://arxiv.org/abs/2007.14913},
 }
 
 @InProceedings{Kumar2006,
@@ -26308,6 +26342,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/j.ipm.2004.11.005},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+}
+
+@InProceedings{Shahsavari2020,
+  author    = {Shahsavari, S. and Ebrahimzadeh, E. and Shahbazi, B. and Falahi, M. and Holur, P. and Bandari, R. and Tangherlini, T. R. and Roychowdhury, V.},
+  title     = {An Automated Pipeline for Character and Relationship Extraction from Readers Literary Book Reviews on Goodreads.com},
+  booktitle = {12th ACM Conference on Web Science},
+  year      = {2020},
+  pages     = {277-286},
+  doi       = {10.1145/3394231.3397918},
+  owner     = {Vincent},
+  timestamp = {2020.08.04},
 }
 
 @Book{Shalev-Shwartz2014,
