--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -542,6 +542,16 @@
   url       = {http://arxiv.org/abs/1305.5782},
 }
 
+@Book{Aigner2011,
+  title     = {Visualization of Time-Oriented Data},
+  publisher = {Springer},
+  year      = {2011},
+  author    = {Aigner, W. and Miksch, S. and Schumann, H. and Tominski, C.},
+  doi       = {10.1007/978-0-85729-079-3},
+  owner     = {Vincent},
+  timestamp = {2020.08.11},
+}
+
 @Book{Aitchison1996,
   title     = {The Seeds of Speech: Language Origin and Evolution},
   publisher = {Cambridge University Press},
@@ -667,6 +677,19 @@
   owner     = {Vincent},
   timestamp = {2015.09.24},
   url       = {http://arxiv.org/abs/cond-mat/0202174},
+}
+
+@Article{Albers2011,
+  author    = {Albers, D. and Dewey, C. and Gleicher, M.},
+  title     = {Sequence Surveyor: Leveraging Overview for Scalable Genomic Alignment Visualization},
+  journal   = {IEEE Transactions on Visualization and Computer Graphics},
+  year      = {2011},
+  volume    = {17},
+  number    = {12},
+  pages     = {2392-2401},
+  doi       = {10.1109/tvcg.2011.232},
+  owner     = {Vincent},
+  timestamp = {2020.08.11},
 }
 
 @Article{Albert1999,
@@ -879,6 +902,17 @@
   doi       = {10.1109/tpami.2008.203},
   owner     = {Vincent},
   timestamp = {2019.04.08},
+}
+
+@InProceedings{Alper2013,
+  author    = {Alper, B. and Bach, B. and Riche, N. H. and Isenberg, T. and Fekete, J.-D.},
+  title     = {Weighted graph comparison techniques for brain connectivity analysis},
+  booktitle = {SIGCHI Conference on Human Factors in Computing Systems},
+  year      = {2013},
+  pages     = {483-492},
+  doi       = {10.1145/2470654.2470724},
+  owner     = {Vincent},
+  timestamp = {2020.08.11},
 }
 
 @Article{Alstott2014,
@@ -2446,6 +2480,19 @@
   timestamp = {2019.04.05},
 }
 
+@Article{Beck2016,
+  author    = {Beck, F. and Burch, M. and Diehl, S. and Weiskopf, D.},
+  title     = {A Taxonomy and Survey of Dynamic Graph Visualization},
+  journal   = {Computer Graphics Forum},
+  year      = {2016},
+  volume    = {36},
+  number    = {1},
+  pages     = {133-159},
+  doi       = {10.1111/cgf.12791},
+  owner     = {Vincent},
+  timestamp = {2020.08.11},
+}
+
 @Article{Beckage2011,
   author    = {Beckage, N. and Smith, L. and Hills, T.},
   title     = {Small Worlds and Semantic Network Growth in Typical and Late Talkers},
@@ -3155,6 +3202,19 @@
   owner     = {Vincent},
   timestamp = {2019.04.11},
   url       = {https://dl.acm.org/citation.cfm?id=1596416},
+}
+
+@Article{Blascheck2017,
+  author    = {Blascheck, T. and Schweizer, M. and Beck, F. and Ertl, T.},
+  title     = {Visual Comparison of Eye Movement Patterns},
+  journal   = {Computer Graphics Forum},
+  year      = {2017},
+  volume    = {36},
+  number    = {3},
+  pages     = {87-97},
+  doi       = {10.1111/cgf.13170},
+  owner     = {Vincent},
+  timestamp = {2020.08.11},
 }
 
 @Electronic{Blatt2014,
@@ -3993,6 +4053,18 @@
   timestamp = {2019.03.23},
 }
 
+@InCollection{Brandes2004,
+  author    = {Brandes, U. and Dwyer, T. and Schreiber, F.},
+  title     = {Visualizing Related Metabolic Pathways in Two and a Half Dimensions},
+  booktitle = {Graph Drawing},
+  publisher = {Springer},
+  year      = {2004},
+  pages     = {111-122},
+  doi       = {10.1007/978-3-540-24595-7_10},
+  owner     = {Vincent},
+  timestamp = {2020.08.11},
+}
+
 @Article{Brandes2011,
   author    = {Brandes, U. and Nick, B.},
   title     = {Asymmetric Relations in Longitudinal Social Networks},
@@ -4534,6 +4606,17 @@
   timestamp = {2019.03.23},
 }
 
+@InProceedings{Burch2016,
+  author    = {Burch, M.},
+  title     = {The Dynamic Call Graph Matrix},
+  booktitle = {9th International Symposium on Visual Information Communication and Interaction},
+  year      = {2016},
+  pages     = {1-8},
+  doi       = {10.1145/2968220.2968226},
+  owner     = {Vincent},
+  timestamp = {2020.08.11},
+}
+
 @Article{Burges1998,
   author    = {Burges, C. J. C.},
   title     = {A Tutorial on Support Vector Machines for Pattern Recognition},
@@ -4928,6 +5011,16 @@
   doi       = {10.1109/tcsvt.2012.2211935},
   owner     = {Vincent},
   timestamp = {2019.03.27},
+}
+
+@InProceedings{Cao2015,
+  author    = {Cao, N. and Lin, Y.-R. and Li, L. and Tong, H.},
+  title     = {G-Miner: Interactive visual group mining on multivariate graphs},
+  booktitle = {33rd Annual ACM Conference on Human Factors in Computing Systems},
+  year      = {2015},
+  doi       = {10.1145/2702123.2702446},
+  owner     = {Vincent},
+  timestamp = {2020.08.11},
 }
 
 @InProceedings{Cao2018,
@@ -5752,6 +5845,19 @@
   doi       = {10.3115/v1/d14-1179},
   owner     = {Vincent},
   timestamp = {2020.01.03},
+}
+
+@Article{Cho2016,
+  author    = {Cho, I. and Dou, W. and Wang, D. X. and Sauda, E. and Ribarsky, W.},
+  title     = {VAiRoma: A Visual Analytics System for Making Sense of Places, Times, and Events in Roman History},
+  journal   = {IEEE Transactions on Visualization and Computer Graphics},
+  year      = {2016},
+  volume    = {22},
+  number    = {1},
+  pages     = {210-219},
+  doi       = {10.1109/tvcg.2015.2467971},
+  owner     = {Vincent},
+  timestamp = {2020.08.11},
 }
 
 @Article{CHOI2006,
@@ -8491,6 +8597,19 @@
   timestamp = {2019.03.27},
 }
 
+@Article{El-Assady2017,
+  author    = {El-Assady, M. and Sevastjanova, R. and Gipp, B. and Keim, D. and Collins, C.},
+  title     = {NEREx: Named-Entity Relationship Exploration in Multi-Party Conversations},
+  journal   = {Computer Graphics Forum},
+  year      = {2017},
+  volume    = {36},
+  number    = {3},
+  pages     = {213-225},
+  doi       = {10.1111/cgf.13181},
+  owner     = {Vincent},
+  timestamp = {2020.08.11},
+}
+
 @InProceedings{Elenberg2015,
   author    = {Elenberg, E. R. and Shanmugam, K. and Borokhovich, M. and Dimakis, A. G.},
   title     = {Beyond Triangles: A Distributed Framework for Estimating 3-profiles of Large Graphs},
@@ -10611,6 +10730,19 @@
   timestamp = {2019.04.12},
 }
 
+@Article{Ghoniem2005,
+  author    = {Ghoniem, M. and Fekete, J.-D. and Castagliola, P.},
+  title     = {On the Readability of Graphs Using Node-Link and Matrix-Based Representations: A Controlled Experiment and Statistical Analysis},
+  journal   = {Information Visualization},
+  year      = {2005},
+  volume    = {4},
+  number    = {2},
+  pages     = {114-135},
+  doi       = {10.1057/palgrave.ivs.9500092},
+  owner     = {Vincent},
+  timestamp = {2020.08.11},
+}
+
 @Article{Ghoshal2013,
   author    = {Ghoshal, G. and Chi, L. and Barabási, A.-L.},
   title     = {Uncovering the role of elementary processes in network evolution},
@@ -10803,6 +10935,19 @@
   owner     = {Vincent},
   timestamp = {2019.04.06},
   url       = {https://books.google.fr/books/about/Bloom_s_How_to_Write_about_William_Shake.html?id=TiP8uv7T2msC&redir_esc=y},
+}
+
+@Article{Gleicher2011,
+  author    = {Gleicher, M. and Albers, D. and Walker, R. and Jusufi, I. and Hansen, C. D. and Roberts, J. C.},
+  title     = {Visual comparison for information visualization},
+  journal   = {Information Visualization},
+  year      = {2011},
+  volume    = {10},
+  number    = {4},
+  pages     = {289-309},
+  doi       = {10.1177/1473871611416549},
+  owner     = {Vincent},
+  timestamp = {2020.08.11},
 }
 
 @Article{Gleiser2003,
@@ -11521,6 +11666,19 @@
   owner     = {Vincent},
   timestamp = {2019.03.30},
   url       = {https://nlp.cs.nyu.edu/publication/papers/ACE05NYUEng.pdf},
+}
+
+@InProceedings{Groh2009,
+  author    = {Groh, G. and Hanstein, H. and Wörndl, W.},
+  title     = {Interactively visualizing dynamic social networks with dyson},
+  booktitle = {IUI Workshop on Visual Interfaces to the Social and the Semantic Web},
+  year      = {2009},
+  volume    = {443},
+  series    = {CEUR Workshop Proceedings},
+  pages     = {11},
+  owner     = {Vincent},
+  timestamp = {2020.08.11},
+  url       = {http://ceur-ws.org/Vol-443/paper11.pdf},
 }
 
 @InProceedings{Groh2011,
@@ -12571,6 +12729,19 @@
   doi       = {10.1186/1471-2288-13-47},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+}
+
+@Article{Henry2007,
+  author    = {Henry, N. and Fekete, J.-D. and McGuffin, M. J.},
+  title     = {NodeTrix: a Hybrid Visualization of Social Networks},
+  journal   = {IEEE Transactions on Visualization and Computer Graphics},
+  year      = {2007},
+  volume    = {13},
+  number    = {6},
+  pages     = {1302-1309},
+  doi       = {10.1109/tvcg.2007.70582},
+  owner     = {Vincent},
+  timestamp = {2020.08.11},
 }
 
 @PhdThesis{Henry2008,
@@ -13681,6 +13852,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.12},
 }
 
+@InProceedings{Jaenicke2017,
+  author    = {Jänicke, S. and Focht, J.},
+  title     = {Untangling the social network of musicians},
+  booktitle = {Digital Humanities},
+  year      = {2017},
+  owner     = {Vincent},
+  timestamp = {2020.08.11},
+  url       = {https://dh2017.adho.org/abstracts/002/002.pdf},
+}
+
 @Book{Jagoda2016,
   title     = {Network Aesthetics},
   publisher = {University of Chicago Press},
@@ -13940,6 +14121,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.05},
 }
 
+@Article{Jianu2010,
+  author    = {Jianu, R. and Yu, K. and Cao, L. and Nguyen, V. and Salomon, A. R. and Laidlaw, D. H.},
+  title     = {Visual Integration of Quantitative Proteomic Data, Pathways, and Protein Interactions},
+  journal   = {IEEE Transactions on Visualization and Computer Graphics},
+  year      = {2010},
+  volume    = {16},
+  number    = {4},
+  pages     = {609-620},
+  doi       = {10.1109/tvcg.2009.106},
+  owner     = {Vincent},
+  timestamp = {2020.08.11},
+}
+
 @InProceedings{Jing2007,
   author    = {Jing, H. and Kambhatla, N. and Roukos, S.},
   title     = {Extracting Social Networks and Biographical Facts From Conversational Speech Transcripts},
@@ -13996,6 +14190,31 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1002/9781118680605.ch20},
   owner     = {Vincent},
   timestamp = {2020.07.23},
+}
+
+@InProceedings{John2017,
+  author    = {John, M. and Lohmann, S. and Koch, S. and Wörner, M. and Ertl, T.},
+  title     = {Visual Analysis of Character and Plot Information Extracted from Narrative Text},
+  booktitle = {International Joint Conference on Computer Vision, Imaging and Computer Graphics},
+  year      = {2017},
+  volume    = {693},
+  series    = {Communications in Computer and Information Science},
+  pages     = {220-241},
+  publisher = {Springer},
+  doi       = {10.1007/978-3-319-64870-5_11},
+  owner     = {Vincent},
+  timestamp = {2020.08.11},
+}
+
+@Article{John2018,
+  author    = {John, M. and Marbach, E. and Lohmann, S. and Heimerl, F. and Ertl, T.},
+  title     = {MultiCloud: Interactive Word Cloud Visualization for the Analysis of Multiple Texts},
+  journal   = {44th Graphics Interface Conference},
+  year      = {2018},
+  pages     = {34-41},
+  doi       = {10.20380/GI2018.06},
+  owner     = {Vincent},
+  timestamp = {2020.08.11},
 }
 
 @InProceedings{John2019,
@@ -14878,6 +15097,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.23},
 }
 
+@InProceedings{Kim2011a,
+  author    = {Kim, K. and Ko, S. and Elmqvist, N. and Ebert, D. S.},
+  title     = {WordBridge: Using Composite Tag Clouds in Node-Link Diagrams for Visualizing Content and Relations in Text Corpora},
+  booktitle = {44th Hawaii International Conference on System Sciences},
+  year      = {2011},
+  doi       = {10.1109/hicss.2011.499},
+  owner     = {Vincent},
+  timestamp = {2020.08.11},
+}
+
 @Article{Kim2014,
   author    = {Kim, D. and Son, S.-W. and Jeong, H.},
   title     = {Large-Scale Quantitative Analysis of Painting Arts},
@@ -15112,6 +15341,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.3115/1075096.1075150},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+}
+
+@InProceedings{Klein2012,
+  author    = {Klein, L.},
+  title     = {Social network analysis and visualization in 'The papers of Thomas Jefferson'},
+  booktitle = {Digital Humanities},
+  year      = {2012},
+  pages     = {12},
+  owner     = {Vincent},
+  timestamp = {2020.08.11},
+  url       = {http://www.dh2012.uni-hamburg.de/conference/programme/abstracts/social-network-analysis-and-visualization-in-the-papers-of-thomas-jefferson.1.html},
 }
 
 @Article{Kleinberg1999,
@@ -16092,6 +16332,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.09},
   url       = {https://psycnet.apa.org/record/2007-04818-000},
+}
+
+@Article{Landesberger2011,
+  author    = {von Landesberger, T. and Kuijper, A. and Schreck, T. and Kohlhammer, J. and van Wijk, J. J. and Fekete, J.-D. and Fellner, D. W.},
+  title     = {Visual Analysis of Large Graphs: State-of-the-Art and Future Research Challenges},
+  journal   = {Computer Graphics Forum},
+  year      = {2011},
+  volume    = {30},
+  number    = {6},
+  pages     = {1719-1749},
+  doi       = {10.1111/j.1467-8659.2011.01898.x},
+  owner     = {Vincent},
+  timestamp = {2020.08.11},
 }
 
 @Book{Langlet2006,
@@ -23080,6 +23333,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.11},
 }
 
+@Book{Phelan1989,
+  title     = {Reading people, reading plots: Character, progression, and the interpretation of narrative},
+  publisher = {University of Chicago Press},
+  year      = {1989},
+  author    = {Phelan, J.},
+  owner     = {Vincent},
+  timestamp = {2020.08.11},
+  url       = {https://kb.osu.edu/handle/1811/31816},
+}
+
 @Article{Philippot1993,
   author    = {Philippot, P.},
   title     = {Inducing and assessing differentiated emotion-feeling states in the laboratory},
@@ -23952,6 +24215,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1073/pnas.1108243108},
   owner     = {Vincent},
   timestamp = {2019.04.13},
+}
+
+@InProceedings{Rao1994,
+  author    = {Rao, R. and Card, S. K.},
+  title     = {The table lens: merging graphical and symbolic representations in an interactive focus + context visualization for tabular information},
+  booktitle = {SIGCHI Conference on Human factors in computing systems celebrating interdependence},
+  year      = {1994},
+  pages     = {318-322},
+  doi       = {10.1145/191666.191776},
+  owner     = {Vincent},
+  timestamp = {2020.08.11},
 }
 
 @Article{Rapoport1953,
@@ -26447,6 +26721,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://dl.acm.org/citation.cfm?id=2078187},
 }
 
+@InProceedings{Shi2011,
+  author    = {Shi, L. and Wang, C. and Wen, Z.},
+  title     = {Dynamic network visualization in 1.5D},
+  booktitle = {IEEE Pacific Visualization Symposium},
+  year      = {2011},
+  pages     = {179-186},
+  doi       = {10.1109/pacificvis.2011.5742388},
+  owner     = {Vincent},
+  timestamp = {2020.08.11},
+}
+
 @Article{Shimbel1953,
   author    = {Shimbel, A.},
   title     = {Structural parameters of communication networks},
@@ -26458,6 +26743,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/bf02476438},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+}
+
+@InProceedings{Shin2019,
+  author    = {Shin, M. and Soen, A. and Readshaw, B. T. and Blackburn, S. M. and Whitelaw, M. and Xie, L.},
+  title     = {Influence Flowers of Academic Entities},
+  booktitle = {IEEE Conference on Visual Analytics Science and Technology},
+  year      = {2019},
+  doi       = {10.1109/vast47406.2019.8986934},
+  owner     = {Vincent},
+  timestamp = {2020.08.11},
 }
 
 @InProceedings{Shirai2016,
@@ -27275,6 +27570,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.07.23},
   url       = {https://books.google.fr/books/about/Sociology.html?id=A5CCPwAACAAJ},
+}
+
+@InProceedings{Stasko2007,
+  author    = {Stasko, J. and Gorg, C. and Liu, Z. and Singhal, K.},
+  title     = {Jigsaw: Supporting Investigative Analysis through Interactive Visualization},
+  booktitle = {IEEE Symposium on Visual Analytics Science and Technology},
+  year      = {2007},
+  doi       = {10.1109/vast.2007.4389006},
+  owner     = {Vincent},
+  timestamp = {2020.08.11},
 }
 
 @Article{Stauffer2001,
@@ -29650,6 +29955,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   title     = {What's being said near "Martha"? Exploring name entities in literary text collections},
   booktitle = {IEEE Symposium on Visual Analytics Science and Technology},
   year      = {2009},
+  pages     = {107-114},
   doi       = {10.1109/vast.2009.5333248},
   owner     = {Vincent},
   timestamp = {2019.03.23},
@@ -29887,6 +30193,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.03.15},
   url       = {https://arxiv.org/abs/1711.07246},
+}
+
+@Article{Wanner2011,
+  author    = {Wanner, F. and Fuchs, J. and Oelke, D. and Keim, D. A.},
+  title     = {Are my children old enough to read these books? Age suitability analysis},
+  journal   = {Polibits},
+  year      = {2011},
+  volume    = {43},
+  pages     = {93-100},
+  owner     = {Vincent},
+  timestamp = {2020.08.11},
+  url       = {http://www.scielo.org.mx/scielo.php?script=sci_arttext&pid=S1870-90442011000100013},
 }
 
 @Article{Ward1963,
